feat: ensamblar por promedios

--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "30958176-d114-4d55-be59-bf5d44a41923",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,7 @@
     "PARAM$train <- c(202102)\n",
     "PARAM$train_final <- c(202101,202102,202103,202104)\n",
     "PARAM$future <- c(202104)\n",
+    "PARAM$future_final <- c(202106)\n",
     "PARAM$semilla_kaggle <- 314159\n",
     "PARAM$cortes <- seq(6000, 19000, by= 500)\n",
     "\n",
@@ -108,10 +109,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1ef73cbd-7fe6-4b2b-988a-6315fe88759f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: parallel\n",
+      "\n",
+      "Loading required package: R.utils\n",
+      "\n",
+      "Loading required package: R.oo\n",
+      "\n",
+      "Loading required package: R.methodsS3\n",
+      "\n",
+      "R.methodsS3 v1.8.2 (2022-06-13 22:00:14 UTC) successfully loaded. See ?R.methodsS3 for help.\n",
+      "\n",
+      "R.oo v1.27.1 (2025-05-02 21:00:05 UTC) successfully loaded. See ?R.oo for help.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘R.oo’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.methodsS3’:\n",
+      "\n",
+      "    throw\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:methods’:\n",
+      "\n",
+      "    getClasses, getMethods\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    attach, detach, load, save\n",
+      "\n",
+      "\n",
+      "R.utils v2.13.0 (2025-02-24 21:20:02 UTC) successfully loaded. See ?R.utils for help.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘R.utils’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:utils’:\n",
+      "\n",
+      "    timestamp\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    cat, commandArgs, getOption, isOpen, nullfile, parse, use, warnings\n",
+      "\n",
+      "\n",
+      "Loading required package: primes\n",
+      "\n",
+      "Loading required package: rlist\n",
+      "\n",
+      "Loading required package: yaml\n",
+      "\n",
+      "Loading required package: DiceKriging\n",
+      "\n",
+      "Loading required package: mlrMBO\n",
+      "\n",
+      "Loading required package: mlr\n",
+      "\n",
+      "Loading required package: ParamHelpers\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘ParamHelpers’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.utils’:\n",
+      "\n",
+      "    isVector\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘mlr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:R.utils’:\n",
+      "\n",
+      "    resample, setThreshold\n",
+      "\n",
+      "\n",
+      "Loading required package: smoof\n",
+      "\n",
+      "Loading required package: checkmate\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘checkmate’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:DiceKriging’:\n",
+      "\n",
+      "    checkNames\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:R.utils’:\n",
+      "\n",
+      "    asInt\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘smoof’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:R.oo’:\n",
+      "\n",
+      "    getDescription, getName\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# cargo las librerias que necesito\n",
     "require(\"data.table\")\n",
@@ -152,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "0b821dd1-2be4-46e9-bf3f-8f60f486660a",
    "metadata": {},
    "outputs": [],
@@ -171,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "1d3ac271-38a3-4f04-8edf-bbe5e4dcdca1",
    "metadata": {},
    "outputs": [
@@ -314,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "d8f17ea4-61a2-4329-b122-57a00e1e89d3",
    "metadata": {},
    "outputs": [],
@@ -326,62 +440,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "673cb5a9-e1b2-4b27-8a19-f4deab38954f",
+   "cell_type": "raw",
+   "id": "d49d372b-1b01-4356-91e1-76e75021f02c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.table: 3 × 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>clase_ternaria</th><th scope=col>N</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>CONTINUA</td><td>642824</td></tr>\n",
-       "\t<tr><td>BAJA+2  </td><td>  3938</td></tr>\n",
-       "\t<tr><td>BAJA+1  </td><td>  3447</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.table: 3 × 2\n",
-       "\\begin{tabular}{ll}\n",
-       " clase\\_ternaria & N\\\\\n",
-       " <fct> & <int>\\\\\n",
-       "\\hline\n",
-       "\t CONTINUA & 642824\\\\\n",
-       "\t BAJA+2   &   3938\\\\\n",
-       "\t BAJA+1   &   3447\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.table: 3 × 2\n",
-       "\n",
-       "| clase_ternaria &lt;fct&gt; | N &lt;int&gt; |\n",
-       "|---|---|\n",
-       "| CONTINUA | 642824 |\n",
-       "| BAJA+2   |   3938 |\n",
-       "| BAJA+1   |   3447 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  clase_ternaria N     \n",
-       "1 CONTINUA       642824\n",
-       "2 BAJA+2           3938\n",
-       "3 BAJA+1           3447"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "# clase01\n",
+    "# clase01 - me daba error con los max_bin\n",
     "dataset[, clase01 := ifelse(clase_ternaria %in% c(\"BAJA+1\", \"BAJA+2\"), 1L, 0L)]\n",
     "\n",
     "dataset_train <- dataset[foto_mes %in% PARAM$train_final]\n",
@@ -402,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "004ef2d2-031e-4a64-bd50-eebae0ce51bf",
    "metadata": {},
    "outputs": [],
@@ -433,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "3d86230e-fd3d-4108-a868-ef0393116cfc",
    "metadata": {},
    "outputs": [
@@ -698,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "56f4f2c9-78cb-4fa5-9116-a881cec350ca",
    "metadata": {},
    "outputs": [],
@@ -712,11 +775,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf966af5-86c1-435d-b303-170990849e84",
+   "cell_type": "raw",
+   "id": "8b57653a-9f4b-4f5b-8f55-5e1714aba736",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# entreno LightGBM\n",
     "\n",
@@ -736,6 +797,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "e97caf90-c6de-4576-ab01-294e6559d271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag <- \"5001_us03_lag1\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "15be877c-722d-4576-8427-c50666f00e4a",
    "metadata": {},
@@ -746,18 +817,16 @@
     "  params  = param_normalizado,\n",
     "  nrounds = 1375,\n",
     "  seeds   = SEEDS,\n",
-    "  tag     = \"5001_us03_lag1\"\n",
+    "  tag     = tag\n",
     ")\n",
     "# paths de modelos guardados:\n",
     "sapply(result, function(x) x$path)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d59335bb-1a40-4a93-bb41-10ff3fb6f3d0",
+   "cell_type": "raw",
+   "id": "3580228b-50da-46e2-b1dc-fe98526372f0",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 2️⃣ Llamar a la función\n",
     "resultados <- entrenar_modelos_paralelos(\n",
@@ -774,8 +843,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "6d0584a5-b4ee-4641-b776-b2c584314ff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_paths <- list.files(pattern = paste0(\"^modelo_\", tag, \"_seed.*\\\\.txt$\"))\n",
+    "modelos <- lapply(model_paths, lgb.load)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "0273e971-1c83-4581-85db-3bbfbe6fcafd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag <- \"5001_us03_lag1\"\n",
+    "\n",
+    "prediccion_ensemble_promedio(\n",
+    "  dataset       = dataset,\n",
+    "  PARAM         = PARAM,\n",
+    "  campos_buenos = campos_buenos,\n",
+    "  experimento   = tag,\n",
+    "  models_dir    = \".\",\n",
+    "  pattern       = paste0(\"^modelo_\", tag, \"_seed.*\\\\.txt$\"),\n",
+    "  out_dir       = \"predicciones/\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "231c34aa-be22-47f5-baab-0b1e489ba286",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'modelo_5001_us03_lag1_seed100271.txt'</li><li>'modelo_5001_us03_lag1_seed250061.txt'</li><li>'modelo_5001_us03_lag1_seed345803.txt'</li><li>'modelo_5001_us03_lag1_seed567983.txt'</li><li>'modelo_5001_us03_lag1_seed780079.txt'</li><li>'modelo_5001_us03_lag1_seed860689.txt'</li><li>'modelo_5001_us03_lag1_seed890009.txt'</li><li>'modelo_5001_us03_lag1_seed910037.txt'</li><li>'modelo_5001_us03_lag1_seed970019.txt'</li><li>'modelo_5001_us03_lag1_seed990137.txt'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed100271.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed250061.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed345803.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed567983.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed780079.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed860689.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed890009.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed910037.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed970019.txt'\n",
+       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed990137.txt'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'modelo_5001_us03_lag1_seed100271.txt'\n",
+       "2. 'modelo_5001_us03_lag1_seed250061.txt'\n",
+       "3. 'modelo_5001_us03_lag1_seed345803.txt'\n",
+       "4. 'modelo_5001_us03_lag1_seed567983.txt'\n",
+       "5. 'modelo_5001_us03_lag1_seed780079.txt'\n",
+       "6. 'modelo_5001_us03_lag1_seed860689.txt'\n",
+       "7. 'modelo_5001_us03_lag1_seed890009.txt'\n",
+       "8. 'modelo_5001_us03_lag1_seed910037.txt'\n",
+       "9. 'modelo_5001_us03_lag1_seed970019.txt'\n",
+       "10. 'modelo_5001_us03_lag1_seed990137.txt'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] \"modelo_5001_us03_lag1_seed100271.txt\"\n",
+       " [2] \"modelo_5001_us03_lag1_seed250061.txt\"\n",
+       " [3] \"modelo_5001_us03_lag1_seed345803.txt\"\n",
+       " [4] \"modelo_5001_us03_lag1_seed567983.txt\"\n",
+       " [5] \"modelo_5001_us03_lag1_seed780079.txt\"\n",
+       " [6] \"modelo_5001_us03_lag1_seed860689.txt\"\n",
+       " [7] \"modelo_5001_us03_lag1_seed890009.txt\"\n",
+       " [8] \"modelo_5001_us03_lag1_seed910037.txt\"\n",
+       " [9] \"modelo_5001_us03_lag1_seed970019.txt\"\n",
+       "[10] \"modelo_5001_us03_lag1_seed990137.txt\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb0a78d1-f220-4bad-9bd9-d9ace7f1d67a",
    "metadata": {},
    "outputs": [],
    "source": []
