feat: armar prediccion ensamblada por promedios

--- a/src/competencia/experimento/train.ipynb
+++ b/src/competencia/experimento/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "30958176-d114-4d55-be59-bf5d44a41923",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,6 @@
     "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")\n",
     "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/04_entrenar_modelos.R\")\n",
     "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/utils/05_ensamblar_promedio.R\")\n",
-    "source(\"/home/vickydiliscia/dmeyf2025/src/competencia/experimento/config.r\")\n",
     "\n",
     "## Semillas\n",
     "PARAM <- list()\n",
@@ -45,7 +44,9 @@
   {
    "cell_type": "markdown",
    "id": "633c0d7b-0d92-4865-b0e5-ea4476e4bc87",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Parametros LGBM"
    ]
@@ -102,130 +103,19 @@
   {
    "cell_type": "markdown",
    "id": "e5a9cad3-1d63-4852-a5e4-3b0a631b543f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Librerias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "1ef73cbd-7fe6-4b2b-988a-6315fe88759f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: parallel\n",
-      "\n",
-      "Loading required package: R.utils\n",
-      "\n",
-      "Loading required package: R.oo\n",
-      "\n",
-      "Loading required package: R.methodsS3\n",
-      "\n",
-      "R.methodsS3 v1.8.2 (2022-06-13 22:00:14 UTC) successfully loaded. See ?R.methodsS3 for help.\n",
-      "\n",
-      "R.oo v1.27.1 (2025-05-02 21:00:05 UTC) successfully loaded. See ?R.oo for help.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘R.oo’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:R.methodsS3’:\n",
-      "\n",
-      "    throw\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:methods’:\n",
-      "\n",
-      "    getClasses, getMethods\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    attach, detach, load, save\n",
-      "\n",
-      "\n",
-      "R.utils v2.13.0 (2025-02-24 21:20:02 UTC) successfully loaded. See ?R.utils for help.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘R.utils’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:utils’:\n",
-      "\n",
-      "    timestamp\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    cat, commandArgs, getOption, isOpen, nullfile, parse, use, warnings\n",
-      "\n",
-      "\n",
-      "Loading required package: primes\n",
-      "\n",
-      "Loading required package: rlist\n",
-      "\n",
-      "Loading required package: yaml\n",
-      "\n",
-      "Loading required package: DiceKriging\n",
-      "\n",
-      "Loading required package: mlrMBO\n",
-      "\n",
-      "Loading required package: mlr\n",
-      "\n",
-      "Loading required package: ParamHelpers\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘ParamHelpers’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:R.utils’:\n",
-      "\n",
-      "    isVector\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘mlr’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:R.utils’:\n",
-      "\n",
-      "    resample, setThreshold\n",
-      "\n",
-      "\n",
-      "Loading required package: smoof\n",
-      "\n",
-      "Loading required package: checkmate\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘checkmate’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:DiceKriging’:\n",
-      "\n",
-      "    checkNames\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:R.utils’:\n",
-      "\n",
-      "    asInt\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘smoof’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:R.oo’:\n",
-      "\n",
-      "    getDescription, getName\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cargo las librerias que necesito\n",
     "require(\"data.table\")\n",
@@ -266,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "0b821dd1-2be4-46e9-bf3f-8f60f486660a",
    "metadata": {},
    "outputs": [],
@@ -428,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "d8f17ea4-61a2-4329-b122-57a00e1e89d3",
    "metadata": {},
    "outputs": [],
@@ -797,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "e97caf90-c6de-4576-ab01-294e6559d271",
    "metadata": {},
    "outputs": [],
@@ -843,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "6d0584a5-b4ee-4641-b776-b2c584314ff4",
    "metadata": {},
    "outputs": [],
@@ -854,93 +744,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "0273e971-1c83-4581-85db-3bbfbe6fcafd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "✅ Archivo de predicciones guardado en: predicciones/prediccion_5001_us03_lag1.txt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "tag <- \"5001_us03_lag1\"\n",
     "\n",
-    "prediccion_ensemble_promedio(\n",
+    "ensamblar_promedio (\n",
     "  dataset       = dataset,\n",
     "  PARAM         = PARAM,\n",
     "  campos_buenos = campos_buenos,\n",
     "  experimento   = tag,\n",
     "  models_dir    = \".\",\n",
     "  pattern       = paste0(\"^modelo_\", tag, \"_seed.*\\\\.txt$\"),\n",
-    "  out_dir       = \"predicciones/\"\n",
+    "  out_dir       = \"predicciones\"\n",
     ")\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "231c34aa-be22-47f5-baab-0b1e489ba286",
+   "cell_type": "markdown",
+   "id": "d779eab6-a794-44b6-9a76-1bff17d67722",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'modelo_5001_us03_lag1_seed100271.txt'</li><li>'modelo_5001_us03_lag1_seed250061.txt'</li><li>'modelo_5001_us03_lag1_seed345803.txt'</li><li>'modelo_5001_us03_lag1_seed567983.txt'</li><li>'modelo_5001_us03_lag1_seed780079.txt'</li><li>'modelo_5001_us03_lag1_seed860689.txt'</li><li>'modelo_5001_us03_lag1_seed890009.txt'</li><li>'modelo_5001_us03_lag1_seed910037.txt'</li><li>'modelo_5001_us03_lag1_seed970019.txt'</li><li>'modelo_5001_us03_lag1_seed990137.txt'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed100271.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed250061.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed345803.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed567983.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed780079.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed860689.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed890009.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed910037.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed970019.txt'\n",
-       "\\item 'modelo\\_5001\\_us03\\_lag1\\_seed990137.txt'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'modelo_5001_us03_lag1_seed100271.txt'\n",
-       "2. 'modelo_5001_us03_lag1_seed250061.txt'\n",
-       "3. 'modelo_5001_us03_lag1_seed345803.txt'\n",
-       "4. 'modelo_5001_us03_lag1_seed567983.txt'\n",
-       "5. 'modelo_5001_us03_lag1_seed780079.txt'\n",
-       "6. 'modelo_5001_us03_lag1_seed860689.txt'\n",
-       "7. 'modelo_5001_us03_lag1_seed890009.txt'\n",
-       "8. 'modelo_5001_us03_lag1_seed910037.txt'\n",
-       "9. 'modelo_5001_us03_lag1_seed970019.txt'\n",
-       "10. 'modelo_5001_us03_lag1_seed990137.txt'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"modelo_5001_us03_lag1_seed100271.txt\"\n",
-       " [2] \"modelo_5001_us03_lag1_seed250061.txt\"\n",
-       " [3] \"modelo_5001_us03_lag1_seed345803.txt\"\n",
-       " [4] \"modelo_5001_us03_lag1_seed567983.txt\"\n",
-       " [5] \"modelo_5001_us03_lag1_seed780079.txt\"\n",
-       " [6] \"modelo_5001_us03_lag1_seed860689.txt\"\n",
-       " [7] \"modelo_5001_us03_lag1_seed890009.txt\"\n",
-       " [8] \"modelo_5001_us03_lag1_seed910037.txt\"\n",
-       " [9] \"modelo_5001_us03_lag1_seed970019.txt\"\n",
-       "[10] \"modelo_5001_us03_lag1_seed990137.txt\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "model_paths"
+    "# Envios a Kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a4c7a4fc-1d65-4a20-a49f-f4a6e87a659e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 0) Config (por si no quedó en memoria)\n",
+    "pred_file <- \"predicciones/prediccion_5001_us03_lag1.txt\"  # tu archivo .txt\n",
+    "if (is.null(PARAM$experimento)) PARAM$experimento <- \"5001_us03_lag1\"\n",
+    "\n",
+    "# 1) Cargar predicciones desde el archivo\n",
+    "tb_prediccion <- fread(pred_file, sep = \"\\t\")  \n",
+    "# Espera columnas: numero_de_cliente, foto_mes, prob"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0a78d1-f220-4bad-9bd9-d9ace7f1d67a",
+   "id": "0241edac-e3bc-4acd-9d55-3a4a2ca62b40",
    "metadata": {},
    "outputs": [],
    "source": []
